fix deprecation warning from Class#newInstance